<resources>
    <string name="appName" description="App name. Don't need to translate." translatable="false">PrivaDroid - UofT</string>
    <string name="facebook_app_id" description="Facebook App ID." translatable="false">905466186491599</string>
    <string name="congratulations" description="Congratulation message.">Congratulations!</string>
    <string name="finish_setting_up_accessibility_and_app_usage" description="Tell users to enable accessibility and app usage in set up screen.">Finish setting up accessibility and usage services to use the app.</string>
    <string name="failed_to_join_make_sure_network" description="Error message when user failed to join the experiment.">Failed to join. Make sure you are connected to the internet.</string>
    <string name="agree_to_terms" description="User needs to agree to the terms to proceed.">Agree to terms above</string>
    <string name="continue_app_settings_button" description="Continue button">Continue</string>
    <string name="submit" description="Submit button">Submit</string>
    <string name="terms_title" description="Terms title">Terms</string>
    <string name="skip_tutorial" description="skip button">Skip</string>
    <string name="join_app" description="start button">Start</string>
    <string name="set_up" description="set up button">Set up</string>
    <string name="ok" description="ok button">OK</string>
    <string name="done" description="done button">Done</string>
    <string name="tutorial_how_title" description="'How to use' tutorial card title">How to use?</string>
    <string name="tutorial_how_description" description="How to use the application description">
        App Install shows a list of apps that were installed after PrivaDroid was installed. Similarly,
        App Uninstall tab shows a list of apps that were uninstalled. Permission screen contains the grants/denys
        you gave to permission requests. You can submit demographic survey and view your Advertisement
        ID, join date and rewards status in the Profile tab.
    </string>
    <string name="tutorial_accessibility_service_title" description="Accessibility service card title">Accessibility Service</string>
    <string name="tutorial_accessibility_service_description" description="Why accessibility service is needed">
        Accessibility Service is required and used when the app needs to read the permission name and whether you grant/deny the
        permission request from an app. For example, Camera app requests Location access to you through a dialog and PrivaDroid will
        read the permission requested (Location) and whether you granted/denied it (Allow/Deny).
    </string>
    <string name="accessibility_rationale" description="Message shown to the user when toggling the accessibility permission for PrivaDroid">
        This permission is needed for PrivaDroid to be able to read permission name on the screen and detect click events when granting/denying permission requests.
    </string>
    <string name="tutorial_app_usage_title" description="App usage card title">App Usage Access</string>
    <string name="tutorial_app_usage_description" description="Why app access is needed">
        Usage access allows PrivaDroid to track what other apps you are using and how often, as well as your carrier, language settings,
        and other details.
    </string>
    <string name="community">Community</string>
    <string name="permission">Permission</string>
    <string name="app_uninstall">App Uninstall</string>
    <string name="app_install">App Install</string>
    <string name="profile">Profile</string>
    <string name="profile_screen_title">Profile</string>
    <string name="your_id">PrivaDroid ID</string>
    <string name="join_date">Join Date</string>
    <string name="last_heartbeat">Last Heartbeat Reminder</string>
    <string name="last_demographic">Last Demographic Reminder</string>
    <string name="app_install_screen_title">App Install</string>
    <string name="app_uninstall_screen_title">App Uninstall</string>
    <string name="community_screen_title">Community</string>
    <string name="permission_screen_title">Permission</string>
    <string name="surveyed">Surveyed</string>
    <string name="surveyed_events">Surveyed Events</string>
    <string name="unsurveyed">Unsurveyed</string>
    <string name="unsurveyed_events">Unsurveyed Events</string>
    <string name="summary">Summary</string>
    <string name="view_data">View Data</string>
    <string name="demographic_screen_title">Demographic Survey</string>
    <string name="rewards_screen_title">Rewards</string>
    <string name="rewards_method_question" description="Let user enter email or bitcoin account to receive reward">Enter your PayPal email address or Bitcoin wallet address that you want to receive the reward with below:</string>
    <string name="rewards_method_hint">PayPal email or Bitcoin wallet</string>
    <string name="rewards_method_confirm">Confirm your email or wallet</string>
    <string name="rewards_method_not_match_error">Email/Wallet values do not match.</string>
    <string name="rewards_complete_join_date_text">You join the experiment on %1$s.</string>
    <string name="rewards_join_date_invalid_contact_team">Invalid join date. Please contact our team.</string>
    <string name="rewards_days_left_text">%1$s days till rewards.</string>
    <string name="rewards_invalid_method">Invalid value</string>
    <string name="surveyed_events_activity_title">Surveyed Events</string>
    <string name="unsurveyed_events_activity_title">Unsurveyed Events</string>
    <plurals name="number_of_app_install_surveyed_events_card_description">
        <item quantity="one">You have %d surveyed app install event.</item>
        <item quantity="other">You have %d surveyed app install events.</item>
    </plurals>
    <plurals name="number_of_app_install_unsurveyed_events_card_description">
        <item quantity="one">You have %d unsurveyed app install event.</item>
        <item quantity="other">You have %d unsurveyed app install events.</item>
    </plurals>
    <plurals name="number_of_app_uninstall_surveyed_events_card_description">
        <item quantity="one">You have %d surveyed app uninstall event.</item>
        <item quantity="other">You have %d surveyed app uninstall events.</item>
    </plurals>
    <plurals name="number_of_app_uninstall_unsurveyed_events_card_description">
        <item quantity="one">You have %d unsurveyed app uninstall event.</item>
        <item quantity="other">You have %d unsurveyed app uninstall events.</item>
    </plurals>
    <plurals name="number_of_permission_unsurveyed_events_card_description">
        <item quantity="one">You have %d unsurveyed permission request event.</item>
        <item quantity="other">You have %d unsurveyed permission request events.</item>
    </plurals>
    <plurals name="number_of_permission_surveyed_events_card_description">
        <item quantity="one">You have %d surveyed permission request event.</item>
        <item quantity="other">You have %d surveyed permission request events.</item>
    </plurals>
    <string name="empty" />
    <string name="why_install_app_on_date_list_item_description" description="format text for app install question">Why did you install %1$s on %2$s?</string>
    <string name="why_uninstall_app_on_date_list_item_description" description="format text for app uninstall question">Why did you uninstall %1$s on %2$s?</string>
    <string name="why_install_app_description" description="format text for app install short question">Why did you install %1$s?</string>
    <string name="why_uninstall_app_description" description="format text for app uninstall short question">Why did you uninstall %1$s?</string>
    <string name="permission_app_name_list_item_title" description="Permission name of app name format text">%1$s permission requested by %2$s app</string>
    <string name="why_grant_permission_for_app_description" description="permission grant format question">Why did you grant %1$s permission to %2$s app on %3$s?</string>
    <string name="why_deny_permission_for_app_description" description="permission deny format question">Why did you deny %1$s permission to %2$s app on %3$s?</string>
    <string name="why_always_grant_permission_for_app_description">Why did you decide to always grant %1$s permission to %2$s app on %3$s?</string>
    <string name="why_only_foreground_permission_for_app_description">Why did you decide to only allow foreground %1$s permission to %2$s app on %3$s?</string>
    <string name="app_uninstall_question_why" description="app uninstall survey question why">1. Why did you uninstall the app?</string>
    <string name="app_uninstall_question_permission_remembered_requested" description="app uninstall survey question remember">2. Do you remember if the app requires any of the following permissions?</string>
    <string name="permission_grant_question_why" description="permission grant survey event why">1. Why did you grant the permission request?</string>
    <string name="permission_grant_question_temporary">4. Do you want to grant the permission temporarily?</string>
    <string name="permission_grant_question_reminder">5. Would you like a notification to remind you of disabling this permission later?</string>
    <string name="revoke_permission_reminder_regex">In (.) hour</string>
    <string name="permission_deny_question_why" description="permission deny survey event why">1. Why did you deny the permission request?</string>
    <string name="permission_question_expect_request" description="permission why requested question">2. Did you expect the app requests this permission?</string>
    <string name="permission_grant_question_comfortable" description="comfort level granting question">3. How comfortable do you feel granting this permission request?</string>
    <string name="permission_deny_question_comfortable" description="comfort level denying question">3. How comfortable do you feel denying this permission request?</string>
    <string name="app_install_question_why" description="why install question">1. Why did you install the app?</string>
    <string name="app_install_question_factors" description="factors of install question">2. Which factors influenced your decision to install the app?</string>
    <string name="app_install_question_know_permission" description="any permission required by user question">3. Do you know what permissions this app requires?</string>
    <string name="app_install_question_which_permission_think" description="permissions required by user question">4. Which of the following permission do you think the app requires?</string>
    <string name="select_an_option">Select an option</string>
    <string name="demographic_question_age">1. What is your age?</string>
    <string name="demographic_question_gender">2. What is your gender?</string>
    <string name="demographic_question_country">3. Which country do you live in?</string>
    <string name="demographic_question_income">4. What is your income level in USD?</string>
    <string name="demographic_question_education">5. What is the highest degree or level of school you have completed?</string>
    <string name="demographic_question_industry">6. Which of the following categories best describes the industry you primarily work in?</string>
    <string name="demographic_question_status">7. What is your current employment status?</string>
    <string name="demographic_question_usage">8. How much time do you spend on your phone daily?</string>
    <string name="answered_on_prefix">Answered on </string>
    <string name="answered_on_prefix_new">Answered on %1$s</string>
    <string name="finish_all_demographic_questions_toast">Please finish all demographic questions.</string>
    <string name="finish_all_event_survey_questions_toast">Please finish all survey questions.</string>
    <string name="exit_survey_screen_title">Exit Survey</string>
</resources>